--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.20.0",
     "better-scroll": "^2.0.4",
     "core-js": "^3.6.5",
+    "swiper": "^3.4.2",
     "vant": "^2.10.7",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
