--- a/package.json
+++ b/package.json
@@ -9,8 +9,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.20.0",
+    "better-scroll": "^2.0.3",
     "core-js": "^3.6.5",
+    "iscroll": "^5.2.0",
+    "ly-tab": "^2.1.2",
+    "swiper": "^6.2.0",
+    "vant": "^2.10.7",
     "vue": "^2.6.11",
+    "vue-awesome-swiper": "^2.5.4",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
@@ -24,6 +31,7 @@
     "@vue/eslint-config-standard": "^5.1.2",
     "@vue/test-utils": "^1.0.3",
     "babel-eslint": "^10.1.0",
+    "babel-plugin-import": "^1.13.0",
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-node": "^11.1.0",
@@ -32,6 +40,7 @@
     "eslint-plugin-vue": "^6.2.2",
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.2",
+    "vue-awesome-swiper": "^3.1.3",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
