--- a/package.json
+++ b/package.json
@@ -10,17 +10,11 @@
   },
   "dependencies": {
     "axios": "^0.20.0",
-<<<<<<< HEAD
     "better-scroll": "^2.0.3",
     "core-js": "^3.6.5",
     "iscroll": "^5.2.0",
     "ly-tab": "^2.1.2",
     "swiper": "^6.2.0",
-=======
-    "better-scroll": "^2.0.4",
-    "core-js": "^3.6.5",
-    "swiper": "^3.4.2",
->>>>>>> 525dfd4558e62639422d3301ed3a7d0f9d3d5637
     "vant": "^2.10.7",
     "vue": "^2.6.11",
     "vue-awesome-swiper": "^2.5.4",
@@ -62,17 +56,15 @@
       "parser": "babel-eslint"
     },
     "rules": {},
-    "overrides": [
-      {
-        "files": [
-          "**/__tests__/*.{j,t}s?(x)",
-          "**/tests/unit/**/*.spec.{j,t}s?(x)"
-        ],
-        "env": {
-          "jest": true
-        }
+    "overrides": [{
+      "files": [
+        "**/__tests__/*.{j,t}s?(x)",
+        "**/tests/unit/**/*.spec.{j,t}s?(x)"
+      ],
+      "env": {
+        "jest": true
       }
-    ]
+    }]
   },
   "browserslist": [
     "> 1%",
